# stock-screener

./: .gitignore  Application structure.pptx
client/: .gitignore  Cargo.toml  target
client/src/: main.rs
client/windows/: Cargo.toml
server/: .gitignore  target
server/plugin/Yahoo Finance/: Cargo.toml
server/plugin/Yahoo Finance/src/: main.rs
server/plugins/Yahoo Finance/src/: main.py
server/src/: main.rs
